adjust: .content; text_inputs; font properties

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,19 +1,42 @@
 body {
   font-size: 14px;
+  font-family: Inter;
+  font-weight: normal;
+  overflow: scroll;
   margin: 0px;
 }
 
 .content {
-  height: 904px;
   background: rgba(38, 92, 50, 1);
   margin-left: 45px;
   margin-top: 45px;
+  margin-bottom: 45px;
   display: flex;
+  min-width: fit-content;
   justify-content: space-between;
   padding: 30px;
 }
 
-.logowanie {
+.logo {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.logo>p {
+  color: rgba(255, 255, 255, 1);
+  font-family: Inter;
+  font-weight: Bold Italic;
+  font-size: 48px;
+  text-align: left;
+}
+
+.logo>img {
+  width: 300px;
+  height: 300px;
+}
+
+.side_panel {
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -24,19 +47,17 @@ body {
 
 .side_panel>p {
   color: rgba(255, 255, 255, 1);
-  font-family: Inter;
-  font-weight: normal;
   font-size: 40px;
   text-align: left;
 }
 
 .text_input_wrapper {
-  display: block;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .text_input_wrapper>p {
-  font-family: Inter;
-  font-weight: normal;
   font-size: 24px;
   text-align: left;
 }
@@ -51,22 +72,18 @@ body {
 }
 
 .text_input>input {
-  width: 100%;
   border: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Inter;
-  font-weight: normal;
   font-size: 24px;
   text-align: left;
   overflow: scroll;
   outline: none;
 }
 
-.text_input > p {
-  font-family: Inter;
-  font-weight: normal;
+.text_input>p {
   text-align: left;
+  float: right;
 }
 
 .button {
@@ -75,7 +92,7 @@ body {
   border-radius: 4px;
   transition: 0.3s;
   background-color: #FFFFFF;
-  color:#265C32;
+  color: #265C32;
   font-size: large;
 }
 
@@ -84,9 +101,7 @@ body {
 }
 
 a {
-  font-family: Inter;
-  font-weight: normal;
   font-size: 24px;
   text-align: left;
-  color:rgba(38, 92, 50, 1);
+  color: rgba(38, 92, 50, 1);
 }
