--- a/html/views/add_product.html
+++ b/html/views/add_product.html
@@ -17,25 +17,29 @@
             <div class="frame">Twoja aktualna waga: 73,5kg</div>
             <a href="#" class="frame">Wyloguj sie</a>
         </header>
-        <section class="calculator">
-                <div class="future">
-                    <div class="input-info">
-                        Planowana waga:
-                        <input name="weight" type="number" placeholder="70">
-                        kg
+        <section class="add-product">
+            <div class="input-form">
+                <div class="add">
+                    <div class="inputs">
+                        <input class="name" type="text" placeholder="product">
+                        <input class="weight" type="number" placeholder="69">
+                        g
+                        <input class="kcal" type="number" placeholder="69">
+                        kcal
                     </div>
-                    <button type="button" class="button-save">Zapisz</button>
+                    <button class="button-form button-add">Dodaj</button>
                 </div>
-                <div class="future">
-                    <div class="input-info">
-                        Planowany termin
-                        <input name="date" type="date">
-                    </div>
-                    <button type="button" class="button-save">Zapisz</button>
+                <div class="search">
+                    <input class="name" type="text" placeholder="product">
+                    <button class="button-form button-search">Szukaj</button>
                 </div>
-            <div class="balance">
-                <p>Aby osiagnąć swój cel musisz spożywać:</p>
-                <p>2137 kcal</p>
+            </div>
+            <div class="product-list">
+                <div class="product">
+                    <p>jablko</p>
+                    <span>Produkt na 100g</span>
+                    <span>posiada 87 kcal</span>
+                </div>
             </div>
         </section>
     </main>
