--- a/html/views/calculator.html
+++ b/html/views/calculator.html
@@ -18,7 +18,6 @@
             <a href="#" class="frame">Wyloguj sie</a>
         </header>
         <section class="calculator">
-            <div class="plans-future">
                 <div class="future">
                     <div class="input-info">
                         Planowana waga:
@@ -30,11 +29,10 @@
                 <div class="future">
                     <div class="input-info">
                         Planowany termin
-                        <input class="date" type="date">
+                        <input name="date" type="date">
                     </div>
                     <button type="button" class="button-save">Zapisz</button>
                 </div>
-            </div>
             <div class="balance">
                 <p>Aby osiagnąć swój cel musisz spożywać:</p>
                 <p>2137 kcal</p>
