--- a/html/css/style_add_product.css
+++ b/html/css/style_add_product.css
@@ -47,13 +47,92 @@ header {
     font-style: italic;
 }
 
-.calculator {
-    display: flex;
-    flex-wrap: wrap;
+.add-product {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     justify-content: space-around;
     background: #265C32;
     height: 100%;
     margin-bottom: 4em;
+}
+
+.input-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inputs{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 60%;
+}
+
+input {
+    padding: 0.5rem;
+    margin: 0 1rem;
+}
+
+.weight, .kcal {
+    width: 30px;
+}
+
+.search .name{
+    width:55%;
+}
+
+
+.add{
+    height: 150px;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /*border-radius: 20px;*/
+    align-items: center;
+    padding: 20px;
+    margin: 30px;
+}
+
+.search {
+    height: 150px;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /*border-radius: 20px;*/
+    align-items: center;
+    padding: 20px;
+    margin: 30px;
+}
+
+.product-list {
+    height: 370px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /*border-radius: 20px;*/
+    align-items: center;
+    padding: 20px;
+    margin: 30px;
+    overflow: auto;
+}
+
+.product {
+    width: 80%;
+    background-color: #265C32;
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem 1rem 1rem;
+    color: white;
+    font-weight: bold;
 }
 
 main {
@@ -74,35 +153,13 @@ main {
     padding: 1rem;
 }
 
-.plans-future {
-    height: 30%;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 3em;
-    margin-bottom: 3em;
-    font-weight: bold;
-}
-
-.future {
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    /*border-radius: 20px;*/
-    align-items: center;
-    padding: 20px;
-    margin: 30px;
-}
-
 .input-info {
     margin-bottom: 0.5em;
 }
 
-.button-save {
+.button-form {
     background: #265C32;
-    width: 50%;
+    width: 58%;
     border: none;
     color: white;
     margin: 0.5em;
@@ -117,26 +174,8 @@ button:hover {
     cursor: pointer;
 }
 
-.button-save:hover {
+.button-form:hover {
     background: #044B14;
-}
-
-.balance {
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    /*border-radius: 20px;*/
-    text-align: center;
-    justify-content: center;
-    margin: 30px;
-    padding: 20px;
-    font-weight: bold;
-}
-
-.balance > p {
-    margin: 0.5em auto;
 }
 
 a {
