--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -16,3 +16,9 @@
     font-size: 24px;
     text-align: left;
 }
+
+a {
+    font-size: 24px;
+    text-align: left;
+    color: rgba(38, 92, 50, 1);
+}
