--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,6 +6,48 @@ body {
   margin: 0px;
 }
 
+.base-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100vh;
+}
+
+nav {
+  width: 5%;
+  height: 100%;
+  background: white;
+}
+
+header {
+  height: 15%;
+  display: flex;
+  background: #265C32;
+  flex-direction: row;
+  margin-right: 3em;
+  margin-top: 2em;
+  margin-bottom: 3em;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  padding: 0 2.5em;
+  font-style: normal;
+}
+
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-container > h2 {
+  padding-left: 1em;
+  font-family: 'Inter', serif;
+  font-style: italic;
+}
+
 .content {
   background: rgba(38, 92, 50, 1);
   margin-left: 45px;
@@ -98,10 +140,4 @@ body {
 
 .button:hover {
   background-color: #265c3249;
-}
-
-a {
-  font-size: 24px;
-  text-align: left;
-  color: rgba(38, 92, 50, 1);
 }
