--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,84 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;500;700&display=swap');
-main {
-    display: flex;
-    width: 95%;
-    flex-direction: column;
-    height: 100%;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-}
 
-header
-{
-    height: 11.3%;
-}
-
-.frame {
-    display: flex;
-    border: 3px solid white;
-    width: 20%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 1rem;
-}
-
-.menu
-{
+.menu {
     color: white;
 }
 
-.name-container
-{
-    font-size: 2vw;
-    margin-bottom: 1.1em;
+.name-container {
+    font-size: 20px;
+    margin: 10px;
     display: flex;
-    gap: 2vw;
+    gap: 20px;
 }
 
-.name
-{
-    background: #265C32;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    width: 50%;
+.name-container>* {
+    flex: 1;
     padding-top: 1em;
     padding-bottom: 1em;
-}
-
-.name >h2
-{
-    margin: auto;
-}
-
-.pronouns
-{
-    font-size: 3vw;
+    text-align: center;
+    background: #265C32;
+    font-size: 30px;
     color: white;
     font-weight: bold;
-    background: #265C32;
-    border: none;
-    width: 50%;
 }
 
-.buttons
-{
+.buttons {
     background: none;
 
-    display: grid;
-    grid-gap: 2vw;
-    grid-template-columns: repeat(4, 1fr) ;
-    grid-auto-rows: 7vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 
-.buttons > button
-{
+.buttons>button {
+    margin: 20px;
+    padding: 25px 30px;
     font-weight: bold;
     color: white;
     background: #265C32;
-    font-size: 2vw;
+    font-size: 25px;
     border: none;
+    min-width: 150px;
 }
 
 button:hover {
@@ -90,4 +51,3 @@ a {
     text-decoration: inherit;
     color: inherit;
 }
-
