--- a/src/main/resources/static/css/style_add_product.css
+++ b/src/main/resources/static/css/style_add_product.css
@@ -35,7 +35,7 @@ input {
 }
 
 
-.add{
+.input-box {
     height: 150px;
     width: 70%;
     display: flex;
@@ -47,20 +47,7 @@ input {
     align-items: center;
     padding: 20px;
     margin: 30px;
-}
-
-.search {
-    height: 150px;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    /*border-radius: 20px;*/
-    align-items: center;
-    padding: 20px;
-    margin: 30px;
+    gap: 20px;
 }
 
 .product-list {
