--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -119,6 +119,7 @@ header>.spacing {
     width: 100%;
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
 .text_input_wrapper>p {
@@ -146,9 +147,22 @@ header>.spacing {
     width: 100%;
 }
 
+.text_input_small {
+    padding: 5px 15px;
+}
+.text_input_small > input {
+    font-size: normal;
+}
+
 .text_input>p {
     text-align: left;
     float: right;
+    margin:auto;
+}
+
+.border-none {
+    padding: 0;
+    border: none;
 }
 
 .button {
