--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -32,6 +32,7 @@ header {
     background: #265C32;
     flex-direction: row;
     margin: 50px;
+    margin-bottom: 20px;
     justify-content: space-between;
     align-items: center;
     color: white;
@@ -55,6 +56,33 @@ header>a:hover {
 header>.spacing {
     display: flex;
     flex: 1;
+}
+
+.buttons {
+    background: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+
+.buttons>a {
+    margin: 10px;
+    padding: 25px 30px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    background: #265C32;
+    font-size: 25px;
+    border: none;
+    border-radius: 4px;
+    min-width: 150px;
+    transition: 0.3s;
+}
+
+.buttons>a:hover {
+    cursor: pointer;
+    background: #044B14;
 }
 
 .logo-container {
