--- a/src/main/resources/static/css/style_calendar.css
+++ b/src/main/resources/static/css/style_calendar.css
@@ -8,36 +8,6 @@
     justify-content: center;
 }
 
-main {
-    display: flex;
-    width: 95%;
-    flex-direction: column;
-    height: 100%;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-}
-
-.frame {
-    display: flex;
-    border: 3px solid white;
-    width: 20%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 1rem;
-}
-
-.input-info {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 0.5em;
-    gap: 1em;
-}
-
-a {
-    text-decoration: inherit;
-    color: inherit;
-}
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -45,11 +15,10 @@ input::-webkit-inner-spin-button {
 }
 
 .calendar {
-    margin: 0;
+    margin: 3vw;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -67,20 +36,20 @@ input::-webkit-inner-spin-button {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.wrapper .current-date {
+.wrapper>.current-date {
     font-size: 1.45rem;
     font-weight: 500;
     padding: 0 1rem;
 }
 
-.wrapper .icons span{
+.wrapper>.icons>span{
     cursor: pointer;
     transition: 0.3s;
     border-radius: 50%;
     padding: 0.8rem;
 }
 
-.wrapper .icons span:hover{
+.wrapper>.icons>span:hover{
     background-color: #c9c6c6;
 }
 
