--- a/src/main/resources/static/css/style_day_plan.css
+++ b/src/main/resources/static/css/style_day_plan.css
@@ -1,13 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;500;700&display=swap');
+
+main {
+    height: 34em;
+}
+
 .day-plan {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     background: #265C32;
     height: 100%;
     margin-bottom: 4em;
+    padding: 30px;
+    gap: 20px;
 }
 
-.add-item{
+.add-item {
+    margin: auto;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -15,7 +23,6 @@
     /*border-radius: 20px;*/
     text-align: center;
     justify-content: center;
-    margin: 30px;
     padding: 20px;
     font-weight: bold;
     gap: 10px;
@@ -53,11 +60,17 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-.item-list {
-    margin-left: 3rem;
+#item-list {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding: 10px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow: scroll;
 }
 
-ul{
+ul {
     margin-top: 2rem;
     list-style: none;
     color: white;
