impl displaying info in header for every view

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -49,6 +49,10 @@ header>.frame {
     transition: 0.3s;
 }
 
+header>.frame>p {
+    display: contents;
+}
+
 header>a:hover {
     background-color: #bfdac5;
 }
