--- a/src/main/resources/static/css/style_add_product.css
+++ b/src/main/resources/static/css/style_add_product.css
@@ -4,14 +4,17 @@
     grid-template-columns: 2fr 1fr;
     justify-content: space-around;
     background: #265C32;
-    height: 100%;
+    max-height: 500px;
     margin-bottom: 4em;
+    padding: 30px;
+    gap: 20px;
 }
 
 .input-form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
 }
 
 .inputs{
@@ -36,7 +39,6 @@ input {
     /*border-radius: 20px;*/
     align-items: center;
     padding: 20px;
-    margin: 30px;
     gap: 20px;
 }
 
